# lain

./: .gitignore  CHANGELOG.md  Cargo.toml  Justfile  README.md  package-lock.json
.github/workflows/: ci.yaml  just-ci.yml
examples/: Cargo.toml
examples/example_fuzzer/: Cargo.toml
examples/example_fuzzer/src/: main.rs
examples/example_target/: main.c
lain/: Cargo.toml
lain/src/: buffer.rs  dangerous_numbers.rs  driver.rs  lib.rs  mutatable.rs  mutator.rs  new_fuzzed.rs  prelude.rs  types.rs
lain_derive/: Cargo.toml  LICENSE  README.md  crates-io.md
lain_derive/src/: dummy.rs  fuzzerobject.rs  lib.rs  mutations.rs  new_fuzzed_old.rs  serialize.rs
lain_derive/src/internals/: ast.rs  attr.rs  ctxt.rs  symbol.rs  utils.rs
testsuite/: Cargo.toml
testsuite/benches/: benchmark_generating_fuzzed_struct.rs  benchmark_serialization_throughput.rs
testsuite/src/: lib.rs
