[package]
name = "lain"
description = "Mutation framework for usage in fuzzers"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true

[dependencies]
rand = { version = "0.9", features = ["small_rng"] }
byteorder = "1.5.0"
paste = "1.0.15"
lain_derive = { version = "0.5.7", path = "../lain_derive" }
log = "0.4"
num-traits = "0.2.19"
num-derive = "0.4.2"
num = "0.4.3"
lazy_static = "1.5.0"
serde = { version = "1.0.217", optional = true, features = ["derive"] }
field-offset = "0.3.6"

[features]
default_features = []
serde_support = ["serde"]
pick_invalid_enum = []
ignore_min_max = []

[profile.release]
debug = true
