[package]
name = "lain_derive"
description = "Derive macros for usage with lain"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true

[dependencies]
syn = { version = "0.15", features = ["extra-traits"] }
quote = "0.6"
proc-macro2 = "0.4"
byteorder = "1.2"
log = "0.4"

[lib]
proc-macro = true
